# telegram-bot

./: automate.ps1  first.cpp
Project1/telegram-bot/: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_CHECKLIST.md  GITHUB_SETUP.md  LICENSE  README.md  SETUP_COMPLETE.txt  main.cpp  telegram_bot.py
Project1/telegram-bot/.github/workflows/: tests.yml
